--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "express": "^4.18.3",
     "mongoose": "^8.2.1",
     "nanoid": "^5.0.6"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
