--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "mds_open_source",
   "version": "1.0.0",
+  "type": "module",
   "description": "Shorcut generator url",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
