--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mds_open_source",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "type": "module",
   "description": "Shorcut generator url",
   "main": "index.js",
@@ -27,7 +27,7 @@
     "express": "^4.18.3",
     "mongoose": "^8.2.1",
     "nanoid": "^5.0.6",
-    "mds_open_source": "https://github.com/Ddg80/mds_open_source"
+    "mds_open_source": "github:Ddg80/mds_open_source#main"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
