--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mds_open_source",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "type": "module",
   "description": "Shorcut generator url",
   "main": "index.js",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Ddg80/mds_open_source.git"
+    "url": "https://github.com/Ddg80/mds_open_source"
   },
   "keywords": [
     "shortcut",
@@ -26,8 +26,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mongoose": "^8.2.1",
-    "nanoid": "^5.0.6",
-    "mds_open_source": "github:Ddg80/mds_open_source#main"
+    "nanoid": "^5.0.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
