--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Ddg80/mds_open_source"
+    "url": "git+https://github.com/Ddg80/mds_open_source.git"
   },
   "keywords": [
     "shortcut",
