--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "scripts": {
     "start": "nodemon index.js"
   },
+  "bin": {
+    "mds_open_source": "./index.js"
+  },
+  "preferGlobal": true,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Ddg80/mds_open_source.git"
@@ -26,7 +30,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mongoose": "^8.2.1",
-    "nanoid": "^5.0.6"
+    "nanoid": "^5.0.6",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
